--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/477510/lucky-seven.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.postimg.cc/mZnSzDB9/Group-7-Project.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Group 7</title>
+    <title>Pierre University</title>
   </head>
   <body>
     <div id="root"></div>
